tests/build/fail/widget/property_not_captured_declared.stderr
error: property `foo` is declared in widget, but is not captured by the widget
 --> $DIR/property_not_captured_declared.rs:8:9
  |
8 |         foo { impl IntoVar<bool> };
  |         ^^^
